RESOLVED FIXED 275466
REGRESSION(279662@main): [ iOS 18 ] 6 TestWebKitAPI.UnifiedTextReplacement tests are constant failure
https://bugs.webkit.org/show_bug.cgi?id=275466
Summary REGRESSION(279662@main): [ iOS 18 ] 6 TestWebKitAPI.UnifiedTextReplacement te...
Richard Robinson
Reported 2024-06-13 20:32:57 PDT
Attachments
Richard Robinson
Comment 1 2024-06-13 20:38:21 PDT
EWS
Comment 2 2024-06-13 23:28:04 PDT
Committed 280000@main (1bb6cdcc3e06): <https://commits.webkit.org/280000@main> Reviewed commits have been landed. Closing PR #29803 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.